--- a/popup.html
+++ b/popup.html
@@ -2,12 +2,17 @@
 <html>
     <head>
         <meta name="viewport" content=""width=device-width, initial-scale="1">
+        <link rel="stylesheet" href="popup.css">
     </head>
     <body>
-        <div class="slidecontainer">
-            <input type="range" min="0.1" max="3" value="1" step="0.01" id="mySlider">
+        <div class="slidecontainer" id="myContainer">
+            <div class="box">
+                <button id="minus">-</button>
+                <input type="range" min="0.1" max="3" value="1" step="0.01" id="mySlider">
+                <button id="plus">+</button>
+            </div>
             <p>Value: <span id="display"></span></p>
-            <button id="reset" disabled>Reset</button>
+            <button id="reset">Reset</button>
         </div>
         <script src="popup.js"></script>
     </body>
