pitch change implemented with Tone.js

--- a/popup.html
+++ b/popup.html
@@ -8,10 +8,10 @@
         <div class="slidecontainer" id="myContainer">
             <div class="box">
                 <button id="minus">-</button>
-                <input type="range" min="0.1" max="3" value="1" step="0.01" id="mySlider">
+                <input type="range" min="-6" max="6" value="0" step="0.01" id="mySlider">
                 <button id="plus">+</button>
             </div>
-            <p>Value: <span id="display"></span></p>
+            <p>Pitch: <span id="display"></span></p>
             <button id="reset">Reset</button>
         </div>
         <script src="popup.js"></script>
